juno/qa/apps/keycloak/cqdg-keycloak.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: keycloak
          image: index.docker.io/ferlabcrsj/cqdg-keycloak:ac054cea466b219636bbbff63d3eeb80d38be81d-1697566277 # {"$imagepolicy": "cqdg-qa-fluxcd:keycloak"}
          args: ["start --optimized"]
          volumeMounts:
            - name: ca-certificate
              mountPath: /opt/ca
              readOnly: true
          livenessProbe:
            httpGet:
              path: /health/live
              port: http
            initialDelaySeconds: 300
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /health/ready
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 1
      volumes:
        - name: ca-certificate
          secret:
            secretName: postgres-qa-ca-certificate
            defaultMode: 0555
